--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/EpicMountainRentals/160x600_EpicMountainRentals.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/EpicMountainRentals/160x600_EpicMountainRentals.htm
@@ -174,6 +174,7 @@
                 if(cta.querySelector('span').offsetHeight > 20) {
                   cta.style.lineHeight = 1.2;
                   cta.style.height = "40px";
+                  cta.style.top = "538px";
                 }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
