--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/MultiResort/160x600_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/MultiResort/160x600_MultiResort.htm
@@ -168,6 +168,7 @@
                 if(cta.querySelector('span').offsetHeight > 20) {
                   cta.style.lineHeight = 1.2;
                   cta.style.height = "40px";
+                  cta.style.top = "538px";
                 }
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
