--- a/E/Epic/EpicPass_Template_15/ads/728x90/728x90.html
+++ b/E/Epic/EpicPass_Template_15/ads/728x90/728x90.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ad</title>
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="https://use.typekit.net/sdk7wfp.css">
+    <link rel="stylesheet" href="https://use.typekit.net/fky6mpy.css">
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script src="js/script.min.js" charset="utf-8"></script>
