--- a/E/Epic/EpicPass_August_Template/ads/300x250/300x250.html
+++ b/E/Epic/EpicPass_August_Template/ads/300x250/300x250.html
@@ -5,7 +5,7 @@
     <title>Ad</title>
     <script type="text/javascript" src="https://ads.everesttech.net/ads/static/local/AMOLibrary.js"></script>
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="https://use.typekit.net/hat6ala.css">
+    <link rel="stylesheet" href="https://use.typekit.net/zsv2vnj.css">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
