--- a/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/728x90/728x90.html
+++ b/M/Microsoft/MicrosoftAzure/Azure_Static_Background_Refresh_FY25/ads/728x90/728x90.html
@@ -102,6 +102,7 @@
             subHeadline: "Get 25+ always-free products",
             ctaText: 'Finish signing up for Azure &amp;#x276F;',//"Your $200 credit awaits",
             clickURL: 'https://www.adobe.com/#MS',
+            colorCopyCta: '#FF0000',
             impressionTracker: 'images/1x1.png'
           },
           feed: [
@@ -166,6 +167,12 @@
             ad.root.querySelector('#headlineText').style.paddingBottom = '0';
           }
           // ad.layers.cta.style.backgroundColor = '#ff0000';
+          if(adData.colorCopyCta.indexOf('|') != -1){
+            ad.layers.headline.style.color = adData['colorCopyCta'].split('|')[0];
+            ad.layers.cta.style.color = adData['colorCopyCta'].split('|')[1];
+          }else{
+            ad.layers.headline.style.color = ad.layers.cta.style.color = adData['colorCopyCta'];
+          }
         });
       }, 1000);
     </script>
