--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Keystone/300x600_Keystone.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Keystone/300x600_Keystone.htm
@@ -88,7 +88,7 @@
           height: 34px;
           font-size: 14px;
           line-height: 20px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.1em;
           /*border-radius: 15px;*/
           ">
       </div>
