--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MultiResort/728x90_MultiResort.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MultiResort/728x90_MultiResort.htm
@@ -168,10 +168,11 @@
               if(layout == 'multipleimages') {
                 content.styleProperties = "{'#cta': {y:25}}";
                 var cta = document.querySelector("#cta");
+                cta.style.left = "auto";
                 cta.style.right = "20px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "80px";
-                cta.style.maxWidth = "120px";
+                cta.style.maxWidth = "100px";
                 cta.style.height = "27px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
@@ -183,10 +184,11 @@
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {y:25}, '#productLableLogo': {css:{display:'block'}}}";
                 var cta = document.querySelector("#cta");
+                cta.style.left = "auto";
                 cta.style.right = "20px";
                 cta.style.width = "auto";
                 cta.style.minWidth = "80px";
-                cta.style.maxWidth = "120px";
+                cta.style.maxWidth = "100px";
                 cta.style.height = "27px";
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
