--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/PaoliPeaks/160x600_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/PaoliPeaks/160x600_PaoliPeaks.htm
@@ -343,6 +343,7 @@
                  document.querySelector('#bottomWhitePatch').style.backgroundColor = '#014E37';
                  document.querySelector('#ad').style.color = '#FFFFFF';
                  document.querySelector('#cta').style.borderRadius = 0;
+                 document.querySelector('#disclaimerText').style.color = '#aeaeae';
 
                  let frameTexts = document.querySelectorAll('.frameText');
                  frameTexts.forEach(function(elem) { elem.classList.add('PromptBold') })
